--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <p>✨“Any fool can write code that a computer can understand. Good programmers write code that humans
                         can understand.”💫</p>
                     <div>
-                        <a href="./Resume.pdf" download="RESUME.pdf">
+                        <a href="./Resumape.pdf" download="RESUME.pdf">
                             <button class="btn btn-secondary">DOWNLOAD CV</button>
                         </a>
                     </div>
@@ -218,7 +218,7 @@
     <section class="freelancer">
         <h1>I'm available for freelancer</h1>
         <p>We provide you high standard clean website for your buisness solution</p>
-        <a href="./Resume.pdf" download="RESUME.pdf">
+        <a href="./Resumae.pdf" download="RESUME.pdf">
             <button class="btn btn-primary">RESUME</button>
         </a>
     </section>
@@ -278,7 +278,7 @@
                 <div class="card">
                     <div class="overlay">
                         <span> Category</span>
-                        <a href=" https://morbius00.github.io/ECLIPSE-ACADEMY-The-E-learning-website/">My Phortfolio</a>
+                        <a href= "https://morbius00.github.io/My-Portfolio/">My Phortfolio</a>
 
                     </div>
                     <img src="./images/Screenshot 2022-05-07 080236.png" width='400px' alt="">
