--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <p>✨“Any fool can write code that a computer can understand. Good programmers write code that humans
                         can understand.”💫</p>
                     <div>
-                        <a href="./Resumape.pdf" download="RESUME.pdf">
+                        <a href="./Resume(1).pdf" download="RESUME.pdf">
                             <button class="btn btn-secondary">DOWNLOAD CV</button>
                         </a>
                     </div>
@@ -218,7 +218,7 @@
     <section class="freelancer">
         <h1>I'm available for freelancer</h1>
         <p>We provide you high standard clean website for your buisness solution</p>
-        <a href="./Resumae.pdf" download="RESUME.pdf">
+        <a href="./Resume(1).pdf" download="RESUME.pdf">
             <button class="btn btn-primary">RESUME</button>
         </a>
     </section>
