--- a/index.html
+++ b/index.html
@@ -286,11 +286,10 @@
                 <div class="card">
                     <div class="overlay">
                         <span> Category</span>
-                        <a href=" https://morbius00.github.io/ECLIPSE-ACADEMY-The-E-learning-website/">Eclipse
-                            academy</a>
+                        <a href=" https://github.com/Morbius00/session">Session</a>
 
                     </div>
-                    <img src="./images/2022-04-09 (5).png" width='400px' alt="">
+                    <img src="./images/Screenshot 2022-05-14 020503.png" width='400px' alt="">
                 </div>
             </div>
         </div>
