Update index .html
added a new project part

--- a/index.html
+++ b/index.html
@@ -291,6 +291,14 @@
                     </div>
                     <img src="./images/Screenshot 2022-05-14 020503.png" width='400px' alt="">
                 </div>
+                <div class="card">
+                    <div class="overlay">
+                        <span> Category</span>
+                        <a href= "https://github.com/Morbius00/Theme-switcher">Theme switcher</a>
+
+                    </div>
+                    <img src="./images/IMG_20220518_222050.jpg" width='400px' alt="">
+                </div>                                                                             
             </div>
         </div>
 
